--- a/midterm/about.html
+++ b/midterm/about.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>mtm6201-Midterm</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="about.css">
 </head>
 
 <body>
-    <header>
-        <img src="./mtm6201-midterm-master-files/images/logo.svg" alt="Algonquin logo-image">
+    <header id="header" class="head">
+        <img class="logo-image" src="./mtm6201-midterm-master-files/images/logo.svg" alt="Algonquin logo-image">
         <nav>
             <ul>
                 <li><a href="index.html">HOME</a></li>
@@ -27,7 +27,8 @@
             2021.</p>
         <p>The current SA fitness zone and gym will be operating and open as usaul. Please visit the Fitness zone and
             the gmynasium for more information of the hours,offering and pricing</p>
-        <img src="./mtm6201-midterm-master-files/images/construction.svg" alt="a construction site">
+        <img class="construction" src="./mtm6201-midterm-master-files/images/construction.svg"
+            alt="a construction site">
         <h1>About</h1>
         <!-- Note be a background image<img src="./mtm6201-midterm-master-files/images/about.jpg" alt="schools hall"> -->
         <h3>Who</h3>
@@ -45,7 +46,7 @@
             a "plus15" Pedestrain link.</p>
         <h1>Service</h1>
         <!-- <img src="./mtm6201-midterm-master-files/images/services.jpg" alt="a cup of tea"> -->
-        <img src="./mtm6201-midterm-master-files/images/bar.jpg" alt="a bar">
+        <img class="bar" src="./mtm6201-midterm-master-files/images/bar.jpg" alt="a bar">
         <h2>Need A Break?</h2>
         <h3>Resturant & Lounge</h3>
         <p>will have full service throughout the day. Why not come in after a long day of class and order one of our
@@ -57,27 +58,27 @@
         <p>are finally here. Grab your friends and book a lane at Students Association Bowling Lanes that will be part
             of the upcoming ARC!don't like bowling?Well, look no further. Practicse your swing no more the weather on
             the Golf simulator that will be located in the ARC building</p>
-        <img src="./mtm6201-midterm-master-files/images/bowling.jpg" alt="a pair of shoes">
+        <img class="bowling" src="./mtm6201-midterm-master-files/images/bowling.jpg" alt="a pair of shoes">
         <h3>Keep Up To Date With Our News Letter</h3> <button>Subscribe</button>
-        <img src="./mtm6201-midterm-master-files/images/fitness.jpg" alt="man carrying dumbbells">
+        <img class="gym" src="./mtm6201-midterm-master-files/images/fitness.jpg" alt="man carrying dumbbells">
         <h2>New year, new me</h2>
         <h3>Fitness Rooms</h3>
         <p>Cardio equipment,free weight, selectorized weight equipment and stretching areas will be located in
             strategically placed location to best suit your work-out routine. Indoor walking/ running track that will
             test your endurancewith inclines and declines that weave around fitness nods the gmynasiums and the louge
             area</p>
-        <img src="./mtm6201-midterm-master-files/images/climbing.jpg" alt="a girl rock climbing">
+        <img class="rock" src="./mtm6201-midterm-master-files/images/climbing.jpg" alt="a girl rock climbing">
         <h2>Indoor Climbing</h2>
         <h3>Rock Climbing</h3>
         <P>Test your strenght and flexibility on the rock-climbing wall. Add some varites to your fitness routine, the
             ARC will be able to offer more yoga and fitness classes to fit into yourbusy schedule. After a busy day of
             rock-climbing or yoga, come enojoy our new massage therapy area.</P>
         <h1>Special thank you to the following</h1>
-        <img src="./mtm6201-midterm-master-files/images/sa.png" alt="sa logo-image">
-        <img src="./mtm6201-midterm-master-files/images/AC_ICON_FC_GRN_240x200.png" alt="ac logo-image">
-        <img src="./mtm6201-midterm-master-files/images/pcl.png" alt="pcl logo-image">
-        <footer>
-            <div>
+        <img class="sa" src="./mtm6201-midterm-master-files/images/sa.png" alt="sa logo-image">
+        <img class="ac" src="./mtm6201-midterm-master-files/images/AC_ICON_FC_GRN_240x200.png" alt="ac logo-image">
+        <img class="pcl" src="./mtm6201-midterm-master-files/images/pcl.png" alt="pcl logo-image">
+        <footer id="footer-container">
+            <div class="footer">
                 <h4>Follow Us</h4>
                 <div class="socialmedia-icon"></div>
                 <img src="./mtm6201-midterm-master-files/icons/facebook.svg" alt="facebook">
