--- a/midterm/index.html
+++ b/midterm/index.html
@@ -55,8 +55,8 @@
             events. Now with the coming ARC facilitys, not only will it be providing more space for the students to
             study, but it will also be bringing roome for latenight entertainment</p>
         <button id="More" type="button">Learn More</button>
-        <footer id="footer-container" class="footer">
-            <div>
+        <footer id="footer-container">
+            <div class="footer">
                 <h4>Follow Us</h4>
                 <div class="socialmedia-icon"></div>
                 <img src="./mtm6201-midterm-master-files/icons/facebook.svg" alt="facebook">
