--- a/midterm/contact.html
+++ b/midterm/contact.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>mtm6201-Midterm</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="contact.css">
 </head>
 
 <body>
-    <header>
-        <img src="./mtm6201-midterm-master-files/images/logo.svg" alt="Algonquin logo-image">
+    <header id="header" class="head">
+        <img class="logo-image" src="./mtm6201-midterm-master-files/images/logo.svg" alt="Algonquin logo-image">
         <nav>
             <ul>
                 <li><a href="index.html">HOME</a></li>
@@ -23,12 +23,13 @@
     <main>
         <!-- Starting the main content of the page -->
         <h1>We Want To Hear From You</h1>
-        <p>If you have any idea fon an activity that you think you and your fellow student well love to partcipate in that we already offering, we want to know about it!</p>
-        <img src="./mtm6201-midterm-master-files/images/contact-img.svg" alt="a group of people using their devices">
+        <p>If you have any idea fon an activity that you think you and your fellow student well love to partcipate in
+            that we already offering, we want to know about it!</p>
+        <img class="contact" src="./mtm6201-midterm-master-files/images/contact-img.svg"
+            alt="a group of people using their devices">
         <form class="apply-form">
             <div>
                 <h2>Contact Us</h2>
-                <p class="p2">Enter your info below</p>
                 <label for="Fullname"></label>
                 <input placeholder="Fullname" type="text" id="Fullname">
             </div>
@@ -44,10 +45,10 @@
                 <label for="Message"></label>
                 <textarea id="Message" name="Feedback" placeholder="Write something.."></textarea>
             </div>
+            <button class="button" type="button">Submit</button>
         </form>
-        <button type="button">Submit</button>
         <h2>Our Location</h2>
-        <h4>Algonquin College Students' Association</h4>
+        <p>Algonquin College Students' Association</p>
         <p>Monday to Friday-8:30am to 6:00pm</p>
         <p>1385 Woodroffe Avenue (E114)</p>
         <P>Ottawa,Ontario</P>
@@ -57,8 +58,8 @@
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2804.0391494268315!2d-75.75911148516252!3d45.34802197909972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20%E2%80%93%20Ottawa%20Campus!5e0!3m2!1sen!2sng!4v1613395694593!5m2!1sen!2sng"
             width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
             tabindex="0"></iframe>
-        <footer>
-            <div>
+        <footer id="footer-container">
+            <div class="footer">
                 <h4>Follow Us</h4>
                 <div class="socialmedia-icon"></div>
                 <img src="./mtm6201-midterm-master-files/icons/facebook.svg" alt="facebook">
