working on the about page

--- a/midterm/about.html
+++ b/midterm/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>mtm6201-Midterm</title>
+    <title>Midterm</title>
     <link rel="stylesheet" href="about.css">
 </head>
 
@@ -31,19 +31,28 @@
             alt="a construction site">
         <h1>About</h1>
         <!-- Note be a background image<img src="./mtm6201-midterm-master-files/images/about.jpg" alt="schools hall"> -->
-        <h3>Who</h3>
-        <p>Is ARC? we are the Athletics & Recreation Center. This is an exciting venture for our algonquin community.
-            This facility will provide our students with a place to break through perceptual barriers in a welcoming,
-            safe, inclusive and inviting enviroment for students of all backgrounds, cultures, and ability to spark a
-            movement</p>
-        <h3>What</h3>
-        <p>is this going cost to me? This facility will be included in your activity fees. All fee-paying student can
-            use and partcipate in all activities in the building. As for the facility, it will cost Algonquin College
-            $48.8million.</p>
-        <h3>where</h3>
-        <p>will the ARC building be? The ARC building will be located northeast of the student common building, opposite
-            of the residence. The facility will be an estimated 100,000 square feet! Connected to the student Commons by
-            a "plus15" Pedestrain link.</p>
+        <div class="gry">
+            <h3>Who</h3>
+            <p>Is ARC? we are the Athletics & Recreation Center. This is an exciting venture for our algonquin
+                community.
+                This facility will provide our students with a place to break through perceptual barriers in a
+                welcoming,
+                safe, inclusive and inviting enviroment for students of all backgrounds, cultures, and ability to spark
+                a
+                movement</p>
+            <h3>What</h3>
+            <p>is this going cost to me? This facility will be included in your activity fees. All fee-paying student
+                can
+                use and partcipate in all activities in the building. As for the facility, it will cost Algonquin
+                College
+                $48.8million.</p>
+            <h3>where</h3>
+            <p>will the ARC building be? The ARC building will be located northeast of the student common building,
+                opposite
+                of the residence. The facility will be an estimated 100,000 square feet! Connected to the student
+                Commons by
+                a "plus15" Pedestrain link.</p>
+        </div>
         <h1>Service</h1>
         <!-- <img src="./mtm6201-midterm-master-files/images/services.jpg" alt="a cup of tea"> -->
         <img class="bar" src="./mtm6201-midterm-master-files/images/bar.jpg" alt="a bar">
@@ -53,13 +62,20 @@
             famous poutines. Finished with your food and drink?Why not try out our new billiiards area. Grab some
             friends and dominate them in some pool, not your thing?Then come on downstairs and try out our new bowling
             lanes</p>
-        <h2>Competitive Friends</h2>
-        <h3>Bowling Lans</h3>
-        <p>are finally here. Grab your friends and book a lane at Students Association Bowling Lanes that will be part
-            of the upcoming ARC!don't like bowling?Well, look no further. Practicse your swing no more the weather on
-            the Golf simulator that will be located in the ARC building</p>
-        <img class="bowling" src="./mtm6201-midterm-master-files/images/bowling.jpg" alt="a pair of shoes">
-        <h3>Keep Up To Date With Our News Letter</h3> <button>Subscribe</button>
+        <div class="grey">
+            <h2>Competitive Friends</h2>
+            <h3>Bowling Lans</h3>
+            <p>are finally here. Grab your friends and book a lane at Students Association Bowling Lanes that will be
+                part
+                of the upcoming ARC!don't like bowling?Well, look no further. Practicse your swing no more the weather
+                on
+                the Golf simulator that will be located in the ARC building</p>
+            <img class="bowling" src="./mtm6201-midterm-master-files/images/bowling.jpg" alt="a pair of shoes">
+        </div>
+        <div class="container">
+            <h3>Keep Up To Date With Our News Letter</h3>
+            <button>Subscribe</button>
+        </div>
         <img class="gym" src="./mtm6201-midterm-master-files/images/fitness.jpg" alt="man carrying dumbbells">
         <h2>New year, new me</h2>
         <h3>Fitness Rooms</h3>
@@ -68,15 +84,20 @@
             test your endurancewith inclines and declines that weave around fitness nods the gmynasiums and the louge
             area</p>
         <img class="rock" src="./mtm6201-midterm-master-files/images/climbing.jpg" alt="a girl rock climbing">
-        <h2>Indoor Climbing</h2>
-        <h3>Rock Climbing</h3>
-        <P>Test your strenght and flexibility on the rock-climbing wall. Add some varites to your fitness routine, the
-            ARC will be able to offer more yoga and fitness classes to fit into yourbusy schedule. After a busy day of
-            rock-climbing or yoga, come enojoy our new massage therapy area.</P>
+        <div class="back">
+            <h2>Indoor Climbing</h2>
+            <h3>Rock Climbing</h3>
+            <P>Test your strenght and flexibility on the rock-climbing wall. Add some varites to your fitness routine,
+                the
+                ARC will be able to offer more yoga and fitness classes to fit into yourbusy schedule. After a busy day
+                of
+                rock-climbing or yoga, come enojoy our new massage therapy area.</P>
+        </div>
         <h1>Special thank you to the following</h1>
         <img class="sa" src="./mtm6201-midterm-master-files/images/sa.png" alt="sa logo-image">
         <img class="ac" src="./mtm6201-midterm-master-files/images/AC_ICON_FC_GRN_240x200.png" alt="ac logo-image">
         <img class="pcl" src="./mtm6201-midterm-master-files/images/pcl.png" alt="pcl logo-image">
+        <img class="cibc" src="./mtm6201-midterm-master-files/images/cibc.png" alt="cibc logo-image">
         <footer id="footer-container">
             <div class="footer">
                 <h4>Follow Us</h4>
