developing the about page

--- a/midterm/about.html
+++ b/midterm/about.html
@@ -22,7 +22,7 @@
     </header>
     <main>
         <!-- Starting the main content of the page -->
-        <h1>What to expect during construction</h1>
+        <h2>What to expect during construction</h2>
         <p>With construction starting April 19 we anticipate the new arrival of the ARC building as easly as August
             2021.</p>
         <p>The current SA fitness zone and gym will be operating and open as usaul. Please visit the Fitness zone and
@@ -31,7 +31,7 @@
             alt="a construction site">
         <h1>About</h1>
         <!-- Note be a background image<img src="./mtm6201-midterm-master-files/images/about.jpg" alt="schools hall"> -->
-        <div class="gry">
+        <div class="grey">
             <h3>Who</h3>
             <p>Is ARC? we are the Athletics & Recreation Center. This is an exciting venture for our algonquin
                 community.
@@ -73,8 +73,8 @@
             <img class="bowling" src="./mtm6201-midterm-master-files/images/bowling.jpg" alt="a pair of shoes">
         </div>
         <div class="container">
-            <h3>Keep Up To Date With Our News Letter</h3>
-            <button>Subscribe</button>
+            <h1>Keep Up To Date With Our News Letter</h1>
+            <button class="sub">Subscribe</button>
         </div>
         <img class="gym" src="./mtm6201-midterm-master-files/images/fitness.jpg" alt="man carrying dumbbells">
         <h2>New year, new me</h2>
@@ -84,7 +84,7 @@
             test your endurancewith inclines and declines that weave around fitness nods the gmynasiums and the louge
             area</p>
         <img class="rock" src="./mtm6201-midterm-master-files/images/climbing.jpg" alt="a girl rock climbing">
-        <div class="back">
+        <div class="grey">
             <h2>Indoor Climbing</h2>
             <h3>Rock Climbing</h3>
             <P>Test your strenght and flexibility on the rock-climbing wall. Add some varites to your fitness routine,
@@ -93,7 +93,7 @@
                 of
                 rock-climbing or yoga, come enojoy our new massage therapy area.</P>
         </div>
-        <h1>Special thank you to the following</h1>
+        <h2>Special thank you to the following</h2>
         <img class="sa" src="./mtm6201-midterm-master-files/images/sa.png" alt="sa logo-image">
         <img class="ac" src="./mtm6201-midterm-master-files/images/AC_ICON_FC_GRN_240x200.png" alt="ac logo-image">
         <img class="pcl" src="./mtm6201-midterm-master-files/images/pcl.png" alt="pcl logo-image">
