working on home page

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -29,16 +29,26 @@
         <h1>Discover Your ARC.</h1>
         <P>With Algonquin College newest facilitys, there's always something for everyone to discover and enjoy</P>
         <div class="icon">
-            <i class="fas fa-bowling-ball"></i>
-            <h3>Bowling</h3>
-            <i class="fas fa-dumbbell"></i>
-            <h3>Fitness Center</h3>
-            <i class="fas fa-basketball-ball"></i>
-            <h3>Indoor court</h3>
+            <div font>
+                <i class="fas fa-bowling-ball"></i>
+                <h3>Bowling</h3>
+            </div>
+            <div>
+                <i class="fas fa-dumbbell"></i>
+                <h3>Fitness Center</h3>
+            </div>
+            <div>
+                <i class="fas fa-hiking"></i>
+                <h3>Rock Climbing</h3>
+            </div>
+            <div>
+                <i class="fas fa-basketball-ball"></i>
+                <h3>Indoor court</h3>
+            </div>
         </div>
         <button class="start" type="button">Get Started</button>
         <img class="girl" src="./mtm6201-midterm-master-files/images/discover.svg" alt=" A girl reading a book">
-        <i class='fas fa-arrow-alt-circle-down'>Scroll</i>
+        <i id="scroll" class='fas fa-arrow-alt-circle-down'>Scroll</i>
         <img class="grad" src="./mtm6201-midterm-master-files/images/school.jpg" alt="Graduation">
         <h2>Discover</h2>
         <h3>Algonquin College</h3>
@@ -60,7 +70,7 @@
         <p>at Algonquin college is endless. We currently have the algonquin common theater where we hosst varity of
             events. Now with the coming ARC facilitys, not only will it be providing more space for the students to
             study, but it will also be bringing roome for latenight entertainment</p>
-        <button id="More" type="button">Learn More</button>
+        <button class="learn" type="button">Learn More</button>
         <footer id="footer-container">
             <div class="footer">
                 <h4>Follow Us</h4>
