--- a/midterm/about.html
+++ b/midterm/about.html
@@ -29,8 +29,10 @@
             the gmynasium for more information of the hours,offering and pricing</p>
         <img class="construction" src="./mtm6201-midterm-master-files/images/construction.svg"
             alt="a construction site">
-        <h1>About</h1>
-        <!-- Note be a background image<img src="./mtm6201-midterm-master-files/images/about.jpg" alt="schools hall"> -->
+        <div class="about">
+            <h1>About</h1>
+            <!-- Note be a background image<img src="./mtm6201-midterm-master-files/images/about.jpg" alt="schools hall"> -->
+        </div>
         <div class="grey">
             <h3>Who</h3>
             <p>Is ARC? we are the Athletics & Recreation Center. This is an exciting venture for our algonquin
@@ -73,7 +75,7 @@
             <img class="bowling" src="./mtm6201-midterm-master-files/images/bowling.jpg" alt="a pair of shoes">
         </div>
         <div class="container">
-            <h1>Keep Up To Date With Our News Letter</h1>
+            <h1 id="keep">Keep Up To Date With Our News Letter</h1>
             <button class="sub">Subscribe</button>
         </div>
         <img class="gym" src="./mtm6201-midterm-master-files/images/fitness.jpg" alt="man carrying dumbbells">
@@ -94,10 +96,12 @@
                 rock-climbing or yoga, come enojoy our new massage therapy area.</P>
         </div>
         <h2>Special thank you to the following</h2>
-        <img class="sa" src="./mtm6201-midterm-master-files/images/sa.png" alt="sa logo-image">
-        <img class="ac" src="./mtm6201-midterm-master-files/images/AC_ICON_FC_GRN_240x200.png" alt="ac logo-image">
-        <img class="pcl" src="./mtm6201-midterm-master-files/images/pcl.png" alt="pcl logo-image">
-        <img class="cibc" src="./mtm6201-midterm-master-files/images/cibc.png" alt="cibc logo-image">
+        <div sponsors>
+            <img class="sa" src="./mtm6201-midterm-master-files/images/sa.png" alt="sa logo-image">
+            <img class="ac" src="./mtm6201-midterm-master-files/images/AC_ICON_FC_GRN_240x200.png" alt="ac logo-image">
+            <img class="pcl" src="./mtm6201-midterm-master-files/images/pcl.png" alt="pcl logo-image">
+            <img class="cibc" src="./mtm6201-midterm-master-files/images/cibc.png" alt="cibc logo-image">
+        </div>
         <footer id="footer-container">
             <div class="footer">
                 <h4>Follow Us</h4>
@@ -107,6 +111,7 @@
                 <img src="./mtm6201-midterm-master-files/icons/twitter.svg" alt="twitter">
                 <img src="./mtm6201-midterm-master-files/icons/youtube.svg" alt="youtube">
                 <img src="./mtm6201-midterm-master-files/icons/arrow.svg" alt="arrow">
+            </div>
             </div>
         </footer>
     </main>
