--- a/midterm/index.html
+++ b/midterm/index.html
@@ -8,7 +8,11 @@
     <title>Midterm</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -35,15 +39,15 @@
             </div>
             <div>
                 <i class="fas fa-dumbbell"></i>
-                <h3>Fitness Center</h3>
+                <h3>FitnessCenter</h3>
             </div>
             <div>
                 <i class="fas fa-hiking"></i>
-                <h3>Rock Climbing</h3>
+                <h3>RockClimbing</h3>
             </div>
             <div>
                 <i class="fas fa-basketball-ball"></i>
-                <h3>Indoor court</h3>
+                <h3>Indoorcourt</h3>
             </div>
         </div>
         <button class="start" type="button">Get Started</button>
