starting tablet home

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -20,12 +20,10 @@
     <!-- Site header  -->
     <header id="header" class="head">
         <img class="logo-image" src="./mtm6201-midterm-master-files/images/logo.svg" alt="Algonquin logo-image">
-        <nav>
-            <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="about.html">ABOUT</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
-            </ul>
+        <nav class="topnav">
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
         </nav>
     </header>
     <main>
@@ -52,7 +50,9 @@
         </div>
         <button class="start" type="button">Get Started</button>
         <img class="girl" src="./mtm6201-midterm-master-files/images/discover.svg" alt=" A girl reading a book">
-        <i id="scroll" class='fas fa-arrow-alt-circle-down'>Scroll</i>
+        <div id="scroll">
+            <i class='fas fa-arrow-alt-circle-down'>scroll</i>
+        </div>
         <img class="grad" src="./mtm6201-midterm-master-files/images/school.jpg" alt="Graduation">
         <h2>Discover</h2>
         <h3>Algonquin College</h3>
