working on about tablet

--- a/midterm/about.html
+++ b/midterm/about.html
@@ -10,14 +10,13 @@
 </head>
 
 <body>
+    <!-- Site header  -->
     <header id="header" class="head">
         <img class="logo-image" src="./mtm6201-midterm-master-files/images/logo.svg" alt="Algonquin logo-image">
-        <nav>
-            <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="about.html">ABOUT</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
-            </ul>
+        <nav class="topnav">
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
         </nav>
     </header>
     <main>
@@ -57,13 +56,18 @@
         </div>
         <h1>Service</h1>
         <!-- <img src="./mtm6201-midterm-master-files/images/services.jpg" alt="a cup of tea"> -->
-        <img class="bar" src="./mtm6201-midterm-master-files/images/bar.jpg" alt="a bar">
-        <h2>Need A Break?</h2>
-        <h3>Resturant & Lounge</h3>
-        <p>will have full service throughout the day. Why not come in after a long day of class and order one of our
-            famous poutines. Finished with your food and drink?Why not try out our new billiiards area. Grab some
-            friends and dominate them in some pool, not your thing?Then come on downstairs and try out our new bowling
-            lanes</p>
+        <div #b>
+            <img class="bar" src="./mtm6201-midterm-master-files/images/bar.jpg" alt="a bar">
+        </div>
+        <div #break>
+            <h2>Need A Break?</h2>
+            <h3>Resturant & Lounge</h3>
+            <p>will have full service throughout the day. Why not come in after a long day of class and order one of our
+                famous poutines. Finished with your food and drink?Why not try out our new billiiards area. Grab some
+                friends and dominate them in some pool, not your thing?Then come on downstairs and try out our new
+                bowling
+                lanes</p>
+        </div>
         <div class="grey">
             <h2>Competitive Friends</h2>
             <h3>Bowling Lans</h3>
