--- a/midterm/index.html
+++ b/midterm/index.html
@@ -61,12 +61,17 @@
             Western Quebec, and upstate New york</p>
         <button class="learn" type="button">Learn More</button>
         <div class="container">
-            <img id="simon" src="./mtm6201-midterm-master-files/images/simon.jpg" alt="A girl named simon">
-            <h2 class="pres">Dijanelle Siomon SA President</h2>
-            <p class="p1">"Only with increased capacity can we expand and create a more inclusive program that attracts
-                a greater
-                number of student to partcipate in physical and social activity.The Student Association is commiteed to
-                focus on programming that result in out students taking person ownership for their health"</p>
+            <div class="sap">
+                <img id="simon" src="./mtm6201-midterm-master-files/images/simon.jpg" alt="A girl named simon">
+                <h2 class="pres">Dijanelle Siomon SA President</h2>
+            </div>
+            <div class="p1">
+                <p>"Only with increased capacity can we expand and create a more inclusive program that attracts
+                    a greater
+                    number of student to partcipate in physical and social activity.The Student Association is commiteed
+                    to
+                    focus on programming that result in out students taking person ownership for their health"</p>
+            </div>
         </div>
         <img id="bar" src="./mtm6201-midterm-master-files/images/entertainment.jpg" alt="People drinking beer">
         <h2>Discover</h2>
