starting tablet version for contact

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -83,12 +83,13 @@
         <footer id="footer-container">
             <div class="footer">
                 <h4>Follow Us</h4>
-                <div class="socialmedia-icon"></div>
-                <img src="./mtm6201-midterm-master-files/icons/facebook.svg" alt="facebook">
-                <img src="./mtm6201-midterm-master-files/icons/instagram.svg" alt="instagram">
-                <img src="./mtm6201-midterm-master-files/icons/twitter.svg" alt="twitter">
-                <img src="./mtm6201-midterm-master-files/icons/youtube.svg" alt="youtube">
-                <img src="./mtm6201-midterm-master-files/icons/arrow.svg" alt="arrow">
+                <div class="socialmedia-icon">
+                    <img src="./mtm6201-midterm-master-files/icons/facebook.svg" alt="facebook">
+                    <img src="./mtm6201-midterm-master-files/icons/instagram.svg" alt="instagram">
+                    <img src="./mtm6201-midterm-master-files/icons/twitter.svg" alt="twitter">
+                    <img src="./mtm6201-midterm-master-files/icons/youtube.svg" alt="youtube">
+                    <img src="./mtm6201-midterm-master-files/icons/arrow.svg" alt="arrow">
+                </div>
             </div>
         </footer>
     </main>
