--- a/midterm/contact.html
+++ b/midterm/contact.html
@@ -10,14 +10,13 @@
 </head>
 
 <body>
+    <!-- Site header  -->
     <header id="header" class="head">
         <img class="logo-image" src="./mtm6201-midterm-master-files/images/logo.svg" alt="Algonquin logo-image">
-        <nav>
-            <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="about.html">ABOUT</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
-            </ul>
+        <nav class="topnav">
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
         </nav>
     </header>
     <main>
@@ -29,46 +28,47 @@
             alt="a group of people using their devices">
         <form class="apply-form">
             <h2>Contact Us.</h2>
-            <div>
+            <div class="name">
                 <label for="Fullname"></label>
                 <input placeholder="Fullname" type="text" id="Fullname">
             </div>
-            <div>
+            <div class="name">
                 <label for="Studentnumber"></label>
                 <input placeholder="Studentnumber" type="text" id="Studentnumber">
             </div>
-            <div>
+            <div class="name">
                 <label for="Email"></label>
                 <input placeholder="Email" type="Email" id="Email">
             </div>
-            <div>
+            <div class="name">
                 <label for="Message"></label>
                 <textarea id="Message" name="Feedback" placeholder="Write something.."></textarea>
             </div>
             <button class="button" type="button">Submit</button>
         </form>
-        <h3>Our Location</h2>
-            <h4>Algonquin College Students' Association</>
-                <p>Monday to Friday-8:30am to 6:00pm</p>
-                <p>1385 Woodroffe Avenue (E114)</p>
-                <P>Ottawa,Ontario</P>
-                <p>K2G1V8</p>
-                <P>(613) 727-4723 X7711</P>
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2804.0391494268315!2d-75.75911148516252!3d45.34802197909972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20%E2%80%93%20Ottawa%20Campus!5e0!3m2!1sen!2sng!4v1613395694593!5m2!1sen!2sng"
-                    width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
-                    tabindex="0"></iframe>
-                <footer id="footer-container">
-                    <div class="footer">
-                        <h4>Follow Us</h4>
-                        <div class="socialmedia-icon"></div>
-                        <img src="./mtm6201-midterm-master-files/icons/facebook.svg" alt="facebook">
-                        <img src="./mtm6201-midterm-master-files/icons/instagram.svg" alt="instagram">
-                        <img src="./mtm6201-midterm-master-files/icons/twitter.svg" alt="twitter">
-                        <img src="./mtm6201-midterm-master-files/icons/youtube.svg" alt="youtube">
-                        <img src="./mtm6201-midterm-master-files/icons/arrow.svg" alt="arrow">
-                    </div>
-                </footer>
+        <h3>Our Location</h3>
+        <h4>Algonquin College Students Association</h4>
+        <p>Monday to Friday-8:30am to 6:00pm</p>
+        <p>1385 Woodroffe Avenue (E114)</p>
+        <P>Ottawa,Ontario</P>
+        <p>K2G1V8</p>
+        <P>(613) 727-4723 X7711</P>
+        <iframe class="map"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2804.0391494268315!2d-75.75911148516252!3d45.34802197909972!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20%E2%80%93%20Ottawa%20Campus!5e0!3m2!1sen!2sng!4v1613395694593!5m2!1sen!2sng"
+            width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+            tabindex="0"></iframe>
+        <footer id="footer-container">
+            <div class="footer">
+                <h4>Follow Us</h4>
+                <div class="socialmedia-icon">
+                    <img src="./mtm6201-midterm-master-files/icons/facebook.svg" alt="facebook">
+                    <img src="./mtm6201-midterm-master-files/icons/instagram.svg" alt="instagram">
+                    <img src="./mtm6201-midterm-master-files/icons/twitter.svg" alt="twitter">
+                    <img src="./mtm6201-midterm-master-files/icons/youtube.svg" alt="youtube">
+                    <img src="./mtm6201-midterm-master-files/icons/arrow.svg" alt="arrow">
+                </div>
+            </div>
+        </footer>
     </main>
 </body>
 
