working on about page

--- a/midterm/about.html
+++ b/midterm/about.html
@@ -97,14 +97,15 @@
                 the
                 ARC will be able to offer more yoga and fitness classes to fit into yourbusy schedule. After a busy day
                 of
-                rock-climbing or yoga, come enojoy our new massage therapy area.</P>
+                rock-climbing or yoga, come enojoy our new massage therapy area.
+            </P>
         </div>
         <h2>Special thank you to the following</h2>
         <div sponsors>
-            <img class="sa" src="./mtm6201-midterm-master-files/images/sa.png" alt="sa logo-image">
-            <img class="ac" src="./mtm6201-midterm-master-files/images/AC_ICON_FC_GRN_240x200.png" alt="ac logo-image">
-            <img class="pcl" src="./mtm6201-midterm-master-files/images/pcl.png" alt="pcl logo-image">
-            <img class="cibc" src="./mtm6201-midterm-master-files/images/cibc.png" alt="cibc logo-image">
+            <img class="spons" src="./mtm6201-midterm-master-files/images/sa.png" alt="sa logo-image">
+            <img class="spons" src="./mtm6201-midterm-master-files/images/AC_ICON_FC_GRN_240x200.png" alt="ac logo-image">
+            <img class="spons" src="./mtm6201-midterm-master-files/images/pcl.png" alt="pcl logo-image">
+            <img class="spons" src="./mtm6201-midterm-master-files/images/cibc.png" alt="cibc logo-image">
         </div>
         <footer id="footer-container">
             <div class="footer">
